# ChangeLog for app-emulation/ganeti
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2009; Lance Albertson <ramereth@gentoo.org> ganeti-2.0.3.ebuild:
  QA Cleanup, add bash-completion, fix paths, made more awesome

  24 Sep 2009; Russell Haering <russell_h@osuosl.org> ganeti-2.0.3.ebuild:
  Fix OS search path from /srv/ganeti/os to /usr/share/ganeti/os

  23 Sep 2009; Russell Haering <russell_h@osuosl.org> ganeti-2.0.3.ebuild,
  +files/ganeti-2.0.3-gentoo-brctl-path.patch:
  Patch hardcoded brctl path for gentoo, add net-misc/socat dependency and
  require xen or kvm.

  01 Sep 2009; Lance Albertson <ramereth@gentoo.org> ganeti-2.0.3.ebuild,
  +metadata.xml:
  Initial 2.x ebuild
