@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ganeti-2.0.3-gentoo-brctl-path.patch 741 RMD160 2e97a68618467ba700fa97d3fc250e6734570c35 SHA1 90d414b327fa4a61850a8f11fab6ef9bd8cf437b SHA256 8362692d1af5b264a9681d63137bd010be29047419718b8daaa320dfb0979965
 AUX ganeti.initd 1500 RMD160 a0f9baca67f1558f1af12d890c6a8112584c0f55 SHA1 22d97c978234e56148ef619db7a9db570c22e5ae SHA256 fcc479a326c83c47289fb908945494aee749567597caa593b93deeb271db3c90
 DIST ganeti-2.0.3.tar.gz 652998 RMD160 d2df53d6e3a5809259e1eb93e9c5017a45eb186c SHA1 ae9d805a5cbe56fbf8940003debde08a0c872139 SHA256 24dc43bf1771440e8da948b69b720209ec377e3bcc9c3ee41be155e4bbbf432b
+DIST ganeti-2.0.4.tar.gz 662927 RMD160 9b70c32d9439b36f2f6128f437ca01426e288f50 SHA1 7d4b6ffd5195812f729a4ad1e7fbc3fa9c6a249a SHA256 d8498ce50f1a77e3ae1bb3dfe0bf3b4d953b34d3d058b213d50abd516b091c74
 EBUILD ganeti-2.0.3.ebuild 1645 RMD160 cdbb18bc4747dd861de834008d393710a63cd48e SHA1 f46631109ae4a446dabddf3bbf03fb4dc78c9206 SHA256 eaf91b329f8899ca5be812cf02b28a3fee1872041c923a666ebd0daf2dc5a4d0
-MISC ChangeLog 734 RMD160 2147cc47ea03442ce01216dd5ff9cf710ec28531 SHA1 e082c7961cc0ddcc986dbdb7b285183c05e9b2fc SHA256 a9316fe58eb358f0985db90187ecdf7ad921ddcd33d11559eac3224e66ce33b4
+EBUILD ganeti-2.0.4.ebuild 1652 RMD160 40b3b3f7dc5e77e36a37527ef5cc3b38f2385b98 SHA1 f7817ee9e0d24b23c688d22eb84f80b76066561c SHA256 83a990f440c0f556e40635b45ad30ad5d05b1174e4e95e9eb5cec52ca4dc59ca
+MISC ChangeLog 854 RMD160 66b34ecf6cc3841e26fbbde57254200924db6cfb SHA1 a773a8b0247d7973da6218de17f8e93bedce7c2a SHA256 e07b7ac6e47cd8066613b7caa17fd366a3a001eb104fb9d4364a56ec0f61906c
 MISC metadata.xml 1187 RMD160 c4f4fd250ec9b7b8fb4738a8d61c09f2af01d3a0 SHA1 921024500dae363c3e73ba565d3300a000f1772c SHA256 e6a405062ca4862abc506bd8fc0138403976c0769dd25ddcb4b737507bda9404
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKxmQXQW+hXSf0t0IRAhx5AKDnH4d2Z1vymtNx7Hh/+vbDCMXDBwCdHW2W
+sBiTCv8n7REhyXf0O4bENns=
+=v7Qy
+-----END PGP SIGNATURE-----
