@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ganeti-2.0.4 (02 Oct 2009)
+
+  02 Oct 2009; Lance Albertson <ramereth@gentoo.org> +ganeti-2.0.4.ebuild:
+  Version bump
+
   28 Sep 2009; Lance Albertson <ramereth@gentoo.org> ganeti-2.0.3.ebuild:
   QA Cleanup, add bash-completion, fix paths, made more awesome
 
